[package]
name = "kvp"
version = "1.0.0"
edition = "2021"
description = "Provides types to store multiple fields where equality, ordering, and hashing are only implemented through one of the types"
license = "MIT"
repository = "https://github.com/john-h-k/kvp"
authors = ["John Harry Kelly <johnharrykelly@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
